--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,18 @@ source = aiohttp, tests
 omit = site-packages
 
 [tool:pytest]
-addopts = --cov=aiohttp -v -rxXs --durations 10
+addopts =
+    # show 10 slowest invocations:
+    --durations=10
+
+    # a bit of verbosity doesn't hurt:
+    -v
+
+    # report all the things == -rxXs:
+    -ra
+
+    # `pytest-cov`:
+    --cov=aiohttp
 filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
