Enable "showlocals" in pytest config

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,9 @@ addopts =
     # report all the things == -rxXs:
     -ra
 
+    # show values of the local vars in errors:
+    --showlocals
+
     # `pytest-cov`:
     --cov=aiohttp
 filterwarnings =
