--- a/.mypy.ini
+++ b/.mypy.ini
@@ -20,6 +20,9 @@ warn_unused_ignores = True
 disallow_any_unimported = True
 warn_return_any = True
 
+[mypy-tests.*]
+disallow_untyped_defs = False
+
 [mypy-aiodns]
 ignore_missing_imports = True
 
@@ -32,7 +35,7 @@ ignore_missing_imports = True
 [mypy-cchardet]
 ignore_missing_imports = True
 
-[mypy-gunicorn]
+[mypy-gunicorn.*]
 ignore_missing_imports = True
 
 [mypy-tokio]
