--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,24 +1,49 @@
 [mypy]
-warn_unused_configs = True
-strict = True
+files = aiohttp, examples
+check_untyped_defs = True
+follow_imports_for_stubs = True
+#disallow_any_decorated = True
+disallow_any_generics = True
+disallow_incomplete_defs = True
+disallow_subclassing_any = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = True
+disallow_untyped_defs = True
+implicit_reexport = False
+no_implicit_optional = True
+show_error_codes = True
+strict_equality = True
+warn_incomplete_stub = True
+warn_redundant_casts = True
+#warn_unreachable = True
+warn_unused_ignores = True
+disallow_any_unimported = True
+warn_return_any = True
+
+[mypy-examples.*]
+disallow_untyped_calls = False
+disallow_untyped_defs = False
 
 [mypy-aiodns]
+ignore_missing_imports = True
+
+[mypy-aioredis]
+ignore_missing_imports = True
+
+[mypy-asynctest]
 ignore_missing_imports = True
 
 [mypy-brotli]
 ignore_missing_imports = True
 
-[mypy-gunicorn.*]
-ignore_missing_imports = True
-
-[mypy-uvloop]
-ignore_missing_imports = True
-
 [mypy-cchardet]
+ignore_missing_imports = True
+
+[mypy-gunicorn.*]
 ignore_missing_imports = True
 
 [mypy-tokio]
 ignore_missing_imports = True
 
-[mypy-asynctest]
+[mypy-uvloop]
 ignore_missing_imports = True
