Fix: Drop wait-for-it

--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -12,4 +12,4 @@ services:
 
   aiohttp:
     image: aiohttp-autobahn_aiohttp
-    command: ["wait-for-it", "autobahn:9001", "--", "python", "tests/autobahn/client/client.py"]
+    command: ["python", "tests/autobahn/client/client.py"]
