--- a/tests/autobahn/server/docker-compose.yml
+++ b/tests/autobahn/server/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.9"
 services:
+  aiohttp:
+    image: aiohttp-autobahn_aiohttp
+    command: ["python", "tests/autobahn/server/server.py"]
+
   autobahn:
     image: aiohttp-autobahn_autobahn
     volumes:
@@ -9,8 +13,4 @@ services:
       - type: bind
         source: ../reports
         target: /reports
-    command: ["/bin/bash", "wait-for-it", "aiohttp:9001", "--", "wstest", "--mode", "fuzzingclient", "--spec", "/config/fuzzingclient.json"]
-
-  aiohttp:
-    image: aiohttp-autobahn_aiohttp
-    command: ["python", "tests/autobahn/server/server.py"]
+    command: ["wstest", "--mode", "fuzzingclient", "--spec", "/config/fuzzingclient.json"]
