--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   autobahn:
-    image: aiohttp-autobahn_autobahn
+    image: crossbario/autobahn-testsuite:0.8.2
     volumes:
       - type: bind
         source: ./fuzzingserver.json
