Fix: Add depends_on configuration option to specify the order of execution

--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -12,4 +12,6 @@ services:
 
   aiohttp:
     image: aiohttp-autobahn_aiohttp
+    depends_on:
+      - autobahn
     command: ["python", "tests/autobahn/client/client.py"]
