Set multiple to true in the components dropdown

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -109,11 +109,11 @@ body:
     description: >-
       aiohttp is both server framework and client library.
       For getting rid of confusing make sure to select
-      'server', 'client' or 'both'.
+      'server', 'client' or both.
+    multiple: true
     options:
       - Server
       - Client
-      - Both
   validations:
     required: true
 
