Change about attribute to description

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 ---
 name: 🚀 Feature request
-about: Suggest an idea for this project
+description: Suggest an idea for this project.
 labels: enhancement
 body:
 - type: markdown
