Use testarea instead of input for python version

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -57,10 +57,11 @@ body:
   validations:
     required: true
 
-- type: input
+- type: textarea
   attributes:
     label: Python Version
     description: Attach your version of Python.
+    render: console
     value: |
       $ python --version
   validations:
