Fix issue forms attributes (#5792)
* Remove render attribute form input fields

* Change about attribute to description

* Use testarea instead of input for python version

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -57,7 +57,7 @@ body:
   validations:
     required: true
 
-- type: input
+- type: textarea
   attributes:
     label: Python Version
     description: Attach your version of Python.
