--- a/tests/autobahn/server/docker-compose.yml
+++ b/tests/autobahn/server/docker-compose.yml
@@ -14,5 +14,5 @@ services:
     command: ["wstest", "--mode", "fuzzingclient", "--spec", "/config/fuzzingclient.json"]
 
   aiohttp:
-    image: aiohttp-autobahn_aiohttp
+    image: autobahn_aiohttp
     command: ["python", "tests/autobahn/server/server.py"]
