Use buildx instead of compose build

--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         target: /reports
 
   aiohttp:
-    image: autobahn_aiohttp
+    image: aiohttp
     depends_on:
       - autobahn
     command: ["python", "tests/autobahn/client/client.py"]
