--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -2,6 +2,7 @@ black==21.6b0; implementation_name=="cpython"
 flake8==3.9.2
 flake8-pyi==20.10.0
 isort==5.9.0
-mypy==0.790; implementation_name=="cpython"
+mypy==0.910; implementation_name=="cpython"
 pre-commit==2.13.0
 pytest==6.2.2
+types-chardet==0.1.3
