Update to Mypy 0.910

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
 files = aiohttp, examples
 check_untyped_defs = True
+exclude = examples/legacy/
 follow_imports_for_stubs = True
 #disallow_any_decorated = True
 disallow_any_generics = True
