--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -5,7 +5,8 @@ flake8-pyi==20.10.0
 importlib-metadata==3.7.0; python_version < "3.8"
 importlib-resources; python_version < "3.9"
 isort==5.9.2
-mypy==0.790; implementation_name=="cpython"
+mypy==0.910; implementation_name=="cpython"
 pre-commit==2.13.0
-pytest==6.1.2
+pytest==6.2.2
 typed-ast==1.4.3; implementation_name=="cpython"
+types-chardet==0.1.3
