Add ports to docker-compose files

--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - type: bind
         source: ../reports
         target: /reports
+    ports:
+      - "9001:9001"
 
   aiohttp:
     image: aiohttp
