--- a/tests/autobahn/server/docker-compose.yml
+++ b/tests/autobahn/server/docker-compose.yml
@@ -16,3 +16,5 @@ services:
   aiohttp:
     image: aiohttp
     command: ["python", "tests/autobahn/server/server.py"]
+    ports:
+      - "9001:9001"
