Add wait-for-it package

--- a/tests/autobahn/client/docker-compose.yml
+++ b/tests/autobahn/client/docker-compose.yml
@@ -16,4 +16,4 @@ services:
     image: aiohttp
     depends_on:
       - autobahn
-    command: ["python", "tests/autobahn/client/client.py"]
+    command: ["wait-for-it", "-s", "autobahn:9001", "--", "python", "tests/autobahn/client/client.py"]
