Use docker instead of docker-compose

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -41,3 +41,6 @@ ignore_missing_imports = True
 
 [mypy-uvloop]
 ignore_missing_imports = True
+
+[mypy-python_on_whales]
+ignore_missing_imports = True
