--- a/requirements/cython.in
+++ b/requirements/cython.in
@@ -1,3 +1,3 @@
 -r multidict.txt
 cython==0.29.23
-typing_extensions==3.7.4.3  # required for parsing aiohttp/hdrs.py by tools/gen.py
+typing_extensions==3.7.4.3; python_version<"3.8"  # required for parsing aiohttp/hdrs.py by tools/gen.py
