--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,8 +93,15 @@ jobs:
         #   - pyver: pypy3
         #     no-extensions: 'Y'
         #     os: ubuntu
+        experimental: [false]
+        include:
+          - os: Ubuntu
+            pyver: "3.10.0-alpha - 3.10.0"
+            experimental: true
+            no-extensions: 'Y'
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.experimental }}
     timeout-minutes: 15
     steps:
     - name: Checkout
