--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,9 @@ zip_ok = false
 ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
 max-line-length = 88
 
+# flake8-requirements
+requirements-file = requirements/dev.txt
+
 [isort]
 line_length=88
 include_trailing_comma=True
