--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -1,6 +1,7 @@
 black==21.6b0; implementation_name=="cpython"
 flake8==3.9.2
 flake8-pyi==20.10.0
+flake8-requirements==1.5
 isort==5.9.2
 mypy==0.910; implementation_name=="cpython"
 pre-commit==2.13.0
