--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ max-line-length = 88
 
 # flake8-requirements
 requirements-file = requirements/test.txt
+requirements-max-depth = 4
 
 [isort]
 line_length=88
