--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,9 @@ zip_ok = false
 [flake8]
 ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
 max-line-length = 88
+per-file-ignores = 
+    # I900: Shouldn't appear in requirements for examples.
+    examples/*:I900
 
 # flake8-requirements
 requirements-file = requirements/test.txt
@@ -68,67 +71,3 @@ minversion = 3.8.2
 testpaths = tests/
 junit_family=xunit2
 xfail_strict = true
-
-[mypy]
-follow_imports = silent
-strict_optional = True
-warn_redundant_casts = True
-warn_unused_ignores = True
-
-# uncomment next lines
-# to enable strict mypy mode
-#
-check_untyped_defs = True
-disallow_any_generics = True
-disallow_untyped_defs = True
-
-
-[mypy-pytest]
-ignore_missing_imports = true
-
-
-[mypy-uvloop]
-ignore_missing_imports = true
-
-
-[mypy-tokio]
-ignore_missing_imports = true
-
-
-[mypy-aiodns]
-ignore_missing_imports = true
-
-
-[mypy-gunicorn.config]
-ignore_missing_imports = true
-
-[mypy-gunicorn.workers]
-ignore_missing_imports = true
-
-
-[mypy-brotli]
-ignore_missing_imports = true
-
-
-[mypy-chardet]
-ignore_missing_imports = true
-
-
-[mypy-cchardet]
-ignore_missing_imports = true
-
-
-[mypy-idna_ssl]
-ignore_missing_imports = true
-
-
-[mypy-asynctest]
-ignore_missing_imports = true
-
-
-[mypy-re_assert]
-ignore_missing_imports = true
-
-
-[mypy-trustme]
-ignore_missing_imports = true
