--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,6 +68,7 @@ repos:
   rev: '3.8.4'
   hooks:
   - id: flake8
+    additional_dependencies: ['flake8-requirements']
     exclude: "^docs/"
 
 - repo: git://github.com/Lucas-C/pre-commit-hooks-markup
