Self-install on RTD

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,5 +1,21 @@
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html
+# for details
+
+---
+version: 2
+
+submodules:
+  include: all  # []
+  exclude: []
+  recursive: true
+
 build:
   image: latest
 python:
-  version: 3.6
-  pip_install: false
+  version: 3.8
+  install:
+  - method: pip
+    path: .
+  - requirements: requirements/doc.txt
+...
