Add a warning when a cookie's length exceeds 4096 bytes (#5959)

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,9 @@ addopts =
     # `pytest-cov`:
     --cov=aiohttp
     --cov=tests/
+
+    # run tests that are not marked with dev_mode
+    -m "not dev_mode"
 filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
@@ -66,3 +69,5 @@ minversion = 3.8.2
 testpaths = tests/
 junit_family=xunit2
 xfail_strict = true
+markers =
+    dev_mode: mark test to run in dev mode.
