--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
     needs: lint
     strategy:
       matrix:
-        pyver: [3.7, 3.8, 3.9]
+        pyver: [3.7, 3.8, 3.9, '3.10']
         no-extensions: ['', 'Y']
         os: [ubuntu, macos, windows]
         exclude:
@@ -93,15 +93,8 @@ jobs:
         #   - pyver: pypy3
         #     no-extensions: 'Y'
         #     os: ubuntu
-        experimental: [false]
-        include:
-          - os: Ubuntu
-            pyver: "3.10.0-alpha - 3.10.0"
-            experimental: true
-            no-extensions: 'Y'
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
-    continue-on-error: ${{ matrix.experimental }}
     timeout-minutes: 15
     steps:
     - name: Checkout
