--- a/.mypy.ini
+++ b/.mypy.ini
@@ -48,3 +48,6 @@ ignore_missing_imports = True
 
 [mypy-uvloop]
 ignore_missing_imports = True
+
+[mypy-python_on_whales]
+ignore_missing_imports = True
