Add support for Python 3.10

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,7 @@ jobs:
     name: Linux
     strategy:
       matrix:
-        pyver: [cp37-cp37m, cp38-cp38, cp39-cp39]
+        pyver: [cp37-cp37m, cp38-cp38, cp39-cp39, cp310-cp310]
         arch: [x86_64, aarch64, i686, ppc64le, s390x]
       fail-fast: false
     runs-on: ubuntu-latest
@@ -224,7 +224,7 @@ jobs:
     name: Binary wheels
     strategy:
       matrix:
-        pyver: [3.7, 3.8, 3.9]
+        pyver: [3.7, 3.8, 3.9, '3.10']
         os: [macos, windows]
         arch: [x86, x64]
         exclude:
