--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,21 +16,24 @@ updates:
       - dependencies
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
 
-  # Maintain dependencies for GitHub Actions aiohttp 3.7
+  # Maintain dependencies for GitHub Actions aiohttp 3.8
   - package-ecosystem: "github-actions"
     directory: "/"
     labels:
       - dependencies
-    target-branch: "3.7"
+    target-branch: "3.8"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
 
-  # Maintain dependencies for Python aiohttp 3.7
+  # Maintain dependencies for Python aiohttp 3.8
   - package-ecosystem: "pip"
     directory: "/"
     labels:
       - dependencies
-    target-branch: "3.7"
+    target-branch: "3.8"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
