--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,79 @@
 [metadata]
+name = aiohttp
+version = attr: aiohttp.__version__
+url = https://github.com/aio-libs/aiohttp
+project_urls =
+  Chat: Gitter = https://gitter.im/aio-libs/Lobby
+  CI: GitHub Actions = https://github.com/aio-libs/aiohttp/actions?query=workflow%%3ACI
+  Coverage: codecov = https://codecov.io/github/aio-libs/aiohttp
+  Docs: Changelog = https://docs.aiohttp.org/en/stable/changes.html
+  Docs: RTD = https://docs.aiohttp.org
+  GitHub: issues = https://github.com/aio-libs/aiohttp/issues
+  GitHub: repo = https://github.com/aio-libs/aiohttp
+description = Async http client/server framework (asyncio)
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+author = Nikolay Kim
+author_email = fafhrd91@gmail.com
+maintainer = Nikolay Kim <fafhrd91@gmail.com>, Andrew Svetlov <andrew.svetlov@gmail.com>
+maintainer_email = aio-libs@googlegroups.com
+license = Apache 2
 license_files = LICENSE.txt
+classifiers =
+  Development Status :: 5 - Production/Stable
+
+  Framework :: AsyncIO
+
+  Intended Audience :: Developers
+
+  License :: OSI Approved :: Apache Software License
+
+  Operating System :: POSIX
+  Operating System :: MacOS :: MacOS X
+  Operating System :: Microsoft :: Windows
+
+  Programming Language :: Python
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
+
+  Topic :: Internet :: WWW/HTTP
+
+[options]
+python_requires = >=3.6
+packages = find:
+# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
+zip_safe = False
+include_package_data = True
+
+install_requires =
+  attrs >= 17.3.0
+  charset-normalizer >=2.0, < 3.0
+  multidict >=4.5, < 7.0
+  async_timeout >= 4.0.0a3, < 5.0
+  asynctest == 0.13.0; python_version<"3.8"
+  yarl >= 1.0, < 2.0
+  idna-ssl >= 1.0; python_version<"3.7"
+  typing_extensions >= 3.7.4; python_version<"3.8"
+  frozenlist >= 1.1.1
+  aiosignal >= 1.1.2
+
+[options.extras_require]
+speedups =
+  aiodns
+  Brotli
+  cchardet
+
+[options.package_data]
+# Ref:
+# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
+# (see notes for the asterisk/`*` meaning)
+* =
+#    *.c
+    *.so
 
 [pep8]
 max-line-length=79
