--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
       run: |
         make cythonize
     - name: Make sdist
-      run:
+      run: |
         python -m pip install build --user
         python -m build --sdist
     - name: Upload artifacts
