--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,10 @@ directory = "CHANGES/"
 title_format = "{version} ({project_date})"
 template = "CHANGES/.TEMPLATE.rst"
 issue_format = "`#{issue} <https://github.com/aio-libs/aiohttp/issues/{issue}>`_"
+
+
+[tool.cibuildwheel]
+test-requires = "-r requirements/test.txt"
+test-command = "pytest {project}/tests"
+# don't build PyPy wheels, install from source instead
+skip = "pp*"
