--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.5
+      with:
+        submodules: true
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
     - name: Install cython
@@ -194,6 +196,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.5
+      with:
+        submodules: true
     - name: Set up QEMU
       if: ${{ matrix.qemu }}
       uses: docker/setup-qemu-action@v1
@@ -234,6 +238,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.5
+      with:
+        submodules: true
     - name: Login
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
