--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,9 +73,41 @@ jobs:
       run: |
         LC_ALL=C sort -c CONTRIBUTORS.txt
 
+  gen_llhttp:
+    name: Generate llhttp sources
+    needs: lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+    - name: Cache llhttp generated files
+      uses: actions/cache@v2
+      id: cache
+      with:
+        key: llhttp-${{ hashFiles('vendor/llhttp/package.json', 'vendor/llhttp/src/**/*') }}
+        path:  vendor/llhttp/build
+    - name: Setup NodeJS
+      if: steps.cache.outputs.cache-hit != 'true'
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - name: Generate llhttp sources
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        make generate-llhttp
+    - name: Upload llhttp generated files
+      uses: actions/upload-artifact@v2
+      with:
+        name: llhttp
+        path: vendor/llhttp/build
+        if-no-files-found: error
+
   test:
     name: Test
-    needs: lint
+    needs: gen_llhttp
     strategy:
       matrix:
         pyver: [3.7, 3.8, 3.9, '3.10']
@@ -124,6 +156,12 @@ jobs:
       if: ${{ matrix.no-extensions == '' }}
       run: |
         make cythonize
+    - name: Restore llhttp generated files
+      if: ${{ matrix.no-extensions == '' }}
+      uses: actions/download-artifact@v2
+      with:
+        name: llhttp
+        path: vendor/llhttp/build/
     - name: Run unittests
       env:
         COLOR: 'yes'
