Update the project maintainers record

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,10 +13,8 @@ project_urls =
 description = Async http client/server framework (asyncio)
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-author = Nikolay Kim
-author_email = fafhrd91@gmail.com
-maintainer = Nikolay Kim <fafhrd91@gmail.com>, Andrew Svetlov <andrew.svetlov@gmail.com>
-maintainer_email = aio-libs@googlegroups.com
+maintainer = aiohttp team <team@aiohttp.org>
+maintainer_email = team@aiohttp.org
 license = Apache 2
 license_files = LICENSE.txt
 classifiers =
