Add a no-op checking job to GHA (#6185)
(cherry picked from commit 15f4411d3a1e93a6e8c7cdc08cc3a0acee7b04a0)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,10 +174,22 @@ jobs:
     #     flags: unit
     #     fail_ci_if_error: false
 
+  check:  # This job does nothing and is only used for the branch protection
+    needs:
+    - test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Report success of the test matrix
+        run: >-
+          print("All's good")
+        shell: python
+
   pre-deploy:
     name: Pre-Deploy
     runs-on: ubuntu-latest
-    needs: test
+    needs: check
     # Run only on pushing a tag
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
