Fix setup.cfg not to install "examples" top-level package

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,10 @@ speedups =
   Brotli
   cchardet
 
+[options.packages.find]
+exclude =
+  examples
+
 [options.package_data]
 # Ref:
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#options
