--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,3 +37,23 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
+
+  # Maintain dependencies for GitHub Actions aiohttp 3.8
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    labels:
+      - dependencies
+    target-branch: "3.9"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 10
+
+  # Maintain dependencies for Python aiohttp 3.8
+  - package-ecosystem: "pip"
+    directory: "/"
+    labels:
+      - dependencies
+    target-branch: "3.9"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 10
