--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aiohttp
-version = attr: aiohttp.__version__
+version = attr: aiohttp._version.__version__
 url = https://github.com/aio-libs/aiohttp
 project_urls =
   Chat: Gitter = https://gitter.im/aio-libs/Lobby
