--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -1,8 +1,5 @@
-black==21.7b0; implementation_name=="cpython"
-flake8==4.0.1
-flake8-pyi==20.10.0
-isort==5.10.0
 mypy==0.910; implementation_name=="cpython"
 pre-commit==2.15.0
 pytest==6.2.5
 types-chardet==0.1.3
+typing_extensions==3.7.4.3
