--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,6 +79,8 @@ repos:
   rev: '4.0.1'
   hooks:
   - id: flake8
+    additional_dependencies:
+      - flake8-docstrings==1.6.0
     exclude: "^docs/"
 - repo: git://github.com/Lucas-C/pre-commit-hooks-markup
   rev: v1.0.1
